--- a/css/estilos.css
+++ b/css/estilos.css
@@ -122,10 +122,15 @@ padding-right: 15px;
   width: 100%;
   height: 28px;
   padding: 10px;
-  color: white;
+  color: black;
   background-color: white;
   opacity: 0.4;
   border-radius: 4px;
   border-style: none;
   margin-top: 5px;
+}
+.label-class {
+  color: white;
+  font-size: 13px;
+  margin-right: 10px;
 }
